# cookiecutter-python-project-template

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .python-version  AGENTS.md  LICENSE  Makefile  README.md  clone-and-install  pyproject.toml
{{ cookiecutter.project_slug }}/.cursor/rules/01-standards/: 1-clean-code.mdc
{{ cookiecutter.project_slug }}/.cursor/rules/05-workflows-and-processes/: 5-tdd.mdc
{{ cookiecutter.project_slug }}/.cursor/rules/07-quality-assurance/: 7-tdd.mdc
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yaml  continuous_integration.yaml  create_github_release.yaml
{{ cookiecutter.project_slug }}/hooks/: pre-commit
{{ cookiecutter.project_slug }}/tests/: test_main.py
