[project]
name = "{{ cookiecutter.project_slug.replace('_', '-') }}"
version = "0.0.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = "{{ cookiecutter.python_version }}"
license = "{{ cookiecutter.project_license }}"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ cookiecutter.python_version_short }}",
]

dependencies = []

[project.urls]
"Bug Tracker" = "https://github.com/cmnemoi/{{ cookiecutter.project_slug }}/issues"
Changelog = "https://github.com/cmnemoi/{{ cookiecutter.project_slug }}/blob/main/CHANGELOG.md"
Homepage = "https://github.com/cmnemoi/{{ cookiecutter.project_slug }}/"
Repository = "https://github.com/cmnemoi/{{ cookiecutter.project_slug }}/"

[dependency-groups]
dev = [
    "pytest-watcher>=0.6.3",
    "python-semantic-release>=10.5.3",
]
lint = [
    "mypy>=1.19.1",
    "pytest-mypy>=1.0.1",
    "ruff>=0.14.13",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.project_slug }}"]
